--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Spieler_Auswahl"
+            android:name=".multipleDevices.PlayerConnectToHost"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
     </application>
