--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,16 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id("dagger.hilt.android.plugin")
+}
 
 android {
     compileSdkVersion 33
     defaultConfig {
         applicationId "com.example.tobias.werwolf_v2"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode 2
         versionName "3.0"
@@ -20,8 +26,8 @@ android {
     productFlavors {
     }
     compileOptions {
-        sourceCompatibility = '11'
-        targetCompatibility = '11'
+        sourceCompatibility  JavaVersion.VERSION_1_8
+        targetCompatibility  JavaVersion.VERSION_1_8
     }
     buildFeatures {
         viewBinding true
@@ -30,7 +36,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'com.android.support.constraint:constraint-layout:2.1.4'
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
