--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+   // id 'com.google.gms.google-services'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id("dagger.hilt.android.plugin")
+//    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -26,8 +26,8 @@ android {
     productFlavors {
     }
     compileOptions {
-        sourceCompatibility  JavaVersion.VERSION_1_8
-        targetCompatibility  JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
         viewBinding true
@@ -38,7 +38,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:2.1.4'
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
-    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.github.androidmads:QRGenerator:1.0.1'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.appcompat:appcompat:1.6.0'
