--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
 
-        classpath 'com.google.gms:google-services:4.3.13'
+      //  classpath 'com.google.gms:google-services:4.3.15'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
+      //  classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
