--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,13 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.1.4'
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
     implementation 'com.github.androidmads:QRGenerator:1.0.1'
+
+    implementation("androidx.fragment:fragment-ktx:1.5.5")
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
